Fixed users container alignment

--- a/code-coaster-dashboard/src/Components/Components/DashboardContainer.css
+++ b/code-coaster-dashboard/src/Components/Components/DashboardContainer.css
@@ -128,15 +128,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 28%; 
     height: 100%;
-    text-align: center;
 }
 
 .places-container h4,
 .users-container h4 {
     font-size: 1.5vw;
-    margin: 0;
+    margin: 1px;
     padding: 2px
 }
 
